--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please login.</h3>
+                        <h3 class="panel-title">Please login or <a href="register.html">register</a>.</h3>
                     </div>
                     <div class="panel-body">
                         <form role="form" action="login.php" method="post">
