Finished trigger, profiles, navs, events

--- a/register.html
+++ b/register.html
@@ -119,7 +119,8 @@
         'viewMode':'decades',
         'minDate':"1960",
         'maxDate':moment(),
-        'format':"Y-M-D"
+        'format':"Y-M-D",
+        'widgetPositioning': {'vertical': 'bottom'}
       });
       $('#picture').click(function(e){
         $('#file').click();
